--- a/app.json
+++ b/app.json
@@ -1,5 +1,20 @@
 {
   "expo": {
-    "sdkVersion": "23.0.0"
+    "sdkVersion": "23.0.0",
+    "orientation": "portrait",
+    "name": "UdacifiMobileFlashcards",
+    "description": "Quiz manager from Udacity React Nanodegree program.",
+    "slug": "udaciflashcards",
+    "version": "1.0",
+    "icon": "https://maxcdn.icons8.com/Color/PNG/512/Sports/triathlon-512.png",
+    "notification": {
+      "icon": "http://www.student-scholarships.com/images/made/img/featured/nav_basketball_45_45.png"
+    },
+    "ios": {
+      "bundleIdentifier": "org.udacimobileflashcards.morozov.exp"
+    },
+    "android": {
+      "package": "org.udacimobileflashcards.morozov.exp"
+    }
   }
 }
