--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "16.0.0",
     "react-native": "0.50.3",
     "react-native-material-kit": "^0.5.1",
+    "react-native-modal": "^4.1.1",
     "react-navigation": "^1.0.0-beta.22",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2"
